--- a/proposals/network_canister_management/20211029T1135Z.md
+++ b/proposals/network_canister_management/20211029T1135Z.md
@@ -1,4 +1,4 @@
-# Upgrade frontend NNS Dapp canister to commit 6a6dff
+# Upgrade frontend NNS Dapp canister to commit f67df91
 
 Wasm hash: dd5d50b3b8c277df99bc1c826ec00d95f97144de16e3a967c2f950ad72314a97 (https://github.com/dfinity/nns-dapp/runs/4045805736?check_suite_focus=true)
 
